--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="hov"></div>
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
             <div class="hov"></div>
-            <div class="hov">3</div>
+            <div class="hov"><p class="test">3</p></div>
         </section>
     </section>
     
