--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
             <div class="hov"></div>
             <div class="hov"></div>
             <div class="hov"></div>
-            <div class="hov"></div>
+            <div class="hov"><p class="chiffre2">2</p></div>
             <div class="hov"></div>
             <div class="hov"></div>
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
             <div class="hov"></div>
-            <div class="hov"><p class="test">3</p></div>
+            <div class="hov"><p class="chiffre3">3</p></div>
         </section>
     </section>
     
