--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="hov"></div>
             <div><p class="trois">3</p></div>
             <div class="hov"></div>
-            <div class="hov"></div>
+            <div class="hov"><p class="chiffreb"><i class="fas fa-bomb"></i></p></div>
             <div class="hov"></div>
             <div class="hov"></div>
             <div class="hov"><p class="chiffre2">2</p></div>
