--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
             <div><p class="deux">2</p></div>
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
-            <div class="hov"></div>
-            <div class="hov"></div>
+            <div class="hov"><p class="chiffre1">1</p></div>
+            <div class="hov"><p class="chiffre1">1</p></div>
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
             <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
-            <div class="hov"></div>
-            <div><p class="trois">3</p></div>
-            <div class="hov"></div>
-            <div class="hov"><p class="chiffreb"><i class="fas fa-bomb"></i></p></div>
-            <div class="hov"></div>
-            <div class="hov"></div>
-            <div class="hov"><p class="chiffre2">2</p></div>
-            <div class="hov"></div>
-            <div class="hov"></div>
-            <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
-            <div class="hov"></div>
             <div class="hov"><p class="chiffre3">3</p></div>
+            <div><p class="trois">3</p></div>
+            <div class="hov"><p class="chiffre2">2</p></div>
+            <div class="hov"><p class="chiffre1">1</p></div>
+            <div class="hov"><p class="chiffre1">1</p></div>
+            <div class="hov"><p class="chiffre2">2</p></div>
+            <div class="hov"><p class="chiffre3">3</p></div>
+            <div class="hov"><p class="chiffre2">2</p></div>
+            <div class="hov"><p class="chiffre2">2</p></div>
+            <div><p class="bomb"><i class="fas fa-bomb"></i></p></div>
+            <div class="hov"><p class="chiffre1">1</p></div>
+            <div class="hov"><p></p></div>
         </section>
     </section>
     
